--- a/templates/WebApp/map_fixedsize.html
+++ b/templates/WebApp/map_fixedsize.html
@@ -64,7 +64,7 @@
                                 <div id="map"></div>
                                 {#                                    <button id="settings"><i class="fa fa-cog" aria-hidden="true"></i></button>#}
                                 <!-- Tabs navs -->
-                                       <div class="accordion" id="layer_manager">
+                                       <div class="accordion" id="layer_manager" style="top:12vh">
                             <div class="accordion-item">
                                 <h2 class="accordion-header" id="headingOne">
                                     <button class="accordion-button" type="button" data-bs-toggle="collapse"
@@ -137,28 +137,28 @@
                                                 <div class="card-body text-center">
                                                     <div class="row row-centered pos">
                                                             <div class="col-sm-6">
-                                                                <a id="osm" href="#" onclick="add_basemap(this.id);"><img src="{% static 'images/basemaps/osm.png' %}" alt="img1" class="img-thumbnail">
+                                                                <a id="osm" href="#" onclick="add_basemap(this.id);"><img style="height: 150px;" src="{% static 'images/basemaps/osm.png' %}" alt="img1" class="img-thumbnail">
                                                                     <p>OSM</p></a>
                                                             </div>
                                                                   <div class="col-sm-6">
-                                                                <a id="topo" href="#" onclick="add_basemap(this.id);"><img src="{% static 'images/basemaps/topo.png' %}" alt="img1" class="img-thumbnail">
+                                                                <a id="topo" href="#" onclick="add_basemap(this.id);"><img style="height: 150px;" src="{% static 'images/basemaps/topo.png' %}" alt="img1" class="img-thumbnail">
                                                                     <p>TOPO</p></a>
                                                             </div>
                                                               <div class="col-sm-6">
-                                                                <a id="gsatellite" href="#" onclick="add_basemap(this.id);"><img src="{% static 'images/basemaps/gsatellite.png' %}" alt="img1" class="img-thumbnail">
+                                                                <a id="gsatellite" href="#" onclick="add_basemap(this.id);"><img style="height: 150px;" src="{% static 'images/basemaps/gsatellite.png' %}" alt="img1" class="img-thumbnail">
                                                                     <p>GOOGLE</p></a>
                                                             </div>
 
                                                             <div class="col-sm-6">
-                                                                <a id="satellite" href="#" onclick="add_basemap(this.id);"><img src="{% static 'images/basemaps/satellite.png' %}" alt="img1" class="img-thumbnail">
+                                                                <a id="satellite" href="#" onclick="add_basemap(this.id);"><img style="height: 150px;" src="{% static 'images/basemaps/satellite.png' %}" alt="img1" class="img-thumbnail">
                                                                     <p>SATELLITE</p></a>
                                                             </div>
                                                                   <div class="col-sm-6">
-                                                                <a id="terrain" href="#" onclick="add_basemap(this.id);"><img src="{% static 'images/basemaps/terrain.png' %}" alt="img1" class="img-thumbnail">
+                                                                <a id="terrain" href="#" onclick="add_basemap(this.id);"><img style="height: 150px;" src="{% static 'images/basemaps/terrain.png' %}" alt="img1" class="img-thumbnail">
                                                                     <p>TERRAIN</p></a>
                                                             </div>
                                                                   <div class="col-sm-6">
-                                                                <a id="delorme" href="#" onclick="add_basemap(this.id);"><img src="{% static 'images/basemaps/delorme.png' %}" alt="img1" class="img-thumbnail">
+                                                                <a id="delorme" href="#" onclick="add_basemap(this.id);"><img style="height: 150px;" src="{% static 'images/basemaps/delorme.png' %}" alt="img1" class="img-thumbnail">
                                                                     <p>DELORME</p></a>
                                                             </div>
                                                     </div>
