--- a/templates/WebApp/map_from_GEE.html
+++ b/templates/WebApp/map_from_GEE.html
@@ -93,11 +93,11 @@
                                             </li>
 
                                         </ul>
-                                        <div class="border-grey bg-white p-3 tab-content">
-                                            <div class="tab-pane active" id="layers" role="tabpanel"
-                                                 aria-labelledby="layers-tab"><p><input class="form-check-input"
-                                                                                      id="collection" type="checkbox"/>
-                                                <label class="form-check-label" for="collection">Image Collection Layer</label>
+                                        <div class="border-grey bg-white tab-content">
+                                            <div class="tab-pane active  p-3 ml-3" id="layers" role="tabpanel"
+                                                 aria-labelledby="layers-tab"><p>
+                                                <label class="form-check-label  mt-2" for="collection"><input class="form-check-input"
+                                                                                      id="collection" type="checkbox"/>Image Collection Layer</label>
                                                 
                                                 <a role="button" href=#" data-bs-toggle="popover" title="Image Collection Info"
                                                    data-bs-trigger="hover focus" 
@@ -111,8 +111,8 @@
                                                 <input id="opacity_collection" type="range" value="contrast" max="0.5"
                                                        min="0" step="0.1"/>
 
-                                                <p><input class="form-check-input" id="asset" type="checkbox"/>
-                                                    <label class="form-check-label" for="asset">User Asset Layer</label>
+                                                <p>
+                                                    <label class="form-check-label mt-2" for="asset"><input class="form-check-input" id="asset" type="checkbox"/>Precipitation factor for carbon monitoring estimations</label>
                                                     <a role="button" href=#" data-bs-toggle="popover"
                                                    data-bs-trigger="hover focus" title="User Asset Info"
                                                    data-bs-content="Use this space to offer a description of the dataset.
@@ -130,30 +130,30 @@
                                                  aria-labelledby="basemaps_gee-tab">
                                                                                                 <div class="card-body text-center">
                                                     <div class="row row-centered pos">
-                                                            <div class="col-sm-6">
-                                                                <a id="osm" href="#" onclick="add_basemap(this.id);"><img style="height: 150px;" src="{% static 'images/basemaps/osm.png' %}" alt="img1" class="img-thumbnail">
-                                                                    <p>OSM</p></a>
+                                                            <div class="col-sm-4">
+                                                                <a id="osm" href="#" onclick="add_basemap(this.id);"><img src="{% static 'images/basemaps/osm.png' %}" alt="img1" class="img-thumbnail">
+                                                                    </a>
                                                             </div>
-                                                                  <div class="col-sm-6">
-                                                                <a id="topo" href="#" onclick="add_basemap(this.id);"><img style="height: 150px;" src="{% static 'images/basemaps/topo.png' %}" alt="img1" class="img-thumbnail">
-                                                                    <p>TOPO</p></a>
+                                                                  <div class="col-sm-4">
+                                                                <a id="topo" href="#" onclick="add_basemap(this.id);"><img src="{% static 'images/basemaps/topo.png' %}" alt="img1" class="img-thumbnail">
+                                                                   </a>
                                                             </div>
-                                                              <div class="col-sm-6">
-                                                                <a id="gsatellite" href="#" onclick="add_basemap(this.id);"><img style="height: 150px;" src="{% static 'images/basemaps/gsatellite.png' %}" alt="img1" class="img-thumbnail">
-                                                                    <p>GOOGLE</p></a>
+                                                              <div class="col-sm-4">
+                                                                <a id="gsatellite" href="#" onclick="add_basemap(this.id);"><img  src="{% static 'images/basemaps/gsatellite.png' %}" alt="img1" class="img-thumbnail">
+                                                                   </a>
                                                             </div>
 
-                                                            <div class="col-sm-6">
-                                                                <a id="satellite" href="#" onclick="add_basemap(this.id);"><img style="height: 150px;" src="{% static 'images/basemaps/satellite.png' %}" alt="img1" class="img-thumbnail">
-                                                                    <p>SATELLITE</p></a>
+                                                            <div class="col-sm-4">
+                                                                <a id="satellite" href="#" onclick="add_basemap(this.id);"><img  src="{% static 'images/basemaps/satellite.png' %}" alt="img1" class="img-thumbnail">
+                                                                    </a>
                                                             </div>
-                                                                  <div class="col-sm-6">
-                                                                <a id="terrain" href="#" onclick="add_basemap(this.id);"><img style="height: 150px;" src="{% static 'images/basemaps/terrain.png' %}" alt="img1" class="img-thumbnail">
-                                                                    <p>TERRAIN</p></a>
+                                                                  <div class="col-sm-4">
+                                                                <a id="terrain" href="#" onclick="add_basemap(this.id);"><img  src="{% static 'images/basemaps/terrain.png' %}" alt="img1" class="img-thumbnail">
+                                                                   </a>
                                                             </div>
-                                                                  <div class="col-sm-6">
-                                                                <a id="delorme" href="#" onclick="add_basemap(this.id);"><img style="height: 150px;" src="{% static 'images/basemaps/delorme.png' %}" alt="img1" class="img-thumbnail">
-                                                                    <p>DELORME</p></a>
+                                                                  <div class="col-sm-4">
+                                                                <a id="delorme" href="#" onclick="add_basemap(this.id);"><img src="{% static 'images/basemaps/delorme.png' %}" alt="img1" class="img-thumbnail">
+                                                                   </a>
                                                             </div>
                                                     </div>
                                                 </div>
@@ -162,7 +162,7 @@
                                         </div>
                                             <div class="tab-pane" id="messages" role="tabpanel"
                                                  aria-labelledby="legends_gee-tab"></div>
-                                              <div class="tab-pane" id="location_gee" role="tabpanel"
+                                              <div class="tab-pane p-3 ml-3" id="location_gee" role="tabpanel"
                                                  aria-labelledby="location_gee-tab"><p>Enter location name and hit Enter to recenter the map</p></div>
                                         </div>
                                     </div>
