gee info button

--- a/templates/WebApp/map_from_GEE.html
+++ b/templates/WebApp/map_from_GEE.html
@@ -96,7 +96,7 @@
                                         <div class="border-grey bg-white tab-content">
                                             <div class="tab-pane active  p-3 ml-3" id="layers" role="tabpanel"
                                                  aria-labelledby="layers-tab"><p>
-                                                <label class="form-check-label  mt-2" for="collection"><input class="form-check-input"
+                                                <label class="form-check-label  mt-2 w-75" for="collection"><input class="form-check-input"
                                                                                       id="collection" type="checkbox"/>Image Collection Layer</label>
                                                 
                                                 <a role="button" href=#" data-bs-toggle="popover" title="Image Collection Info"
@@ -112,7 +112,7 @@
                                                        min="0" step="0.1"/>
 
                                                 <p>
-                                                    <label class="form-check-label mt-2" for="asset"><input class="form-check-input" id="asset" type="checkbox"/>Precipitation factor for carbon monitoring estimations</label>
+                                                    <label class="form-check-label mt-2 w-75" for="asset"><input class="form-check-input" id="asset" type="checkbox"/>Precipitation factor for carbon monitoring estimations</label>
                                                     <a role="button" href=#" data-bs-toggle="popover"
                                                    data-bs-trigger="hover focus" title="User Asset Info"
                                                    data-bs-content="Use this space to offer a description of the dataset.
