--- a/templates/WebApp/map_from_GEE.html
+++ b/templates/WebApp/map_from_GEE.html
@@ -66,7 +66,7 @@
                                     <div class="accordion-body">
                                    <div id="layer_manager_gee1">
                                     <div class="container mt-3">
-                                        <ul class="m-0 nav nav-fill nav-justified nav-tabs" id="myTab1" role="tablist">
+                                        <ul class="m-0 nav nav-fill nav-justified nav-tabs" style="font-size:smaller;" id="myTab1" role="tablist">
                                             <li class="nav-item" role="presentation">
                                                 <button class="active nav-link" id="layers-tab" data-bs-toggle="tab"
                                                         data-bs-target="#layers" type="button" role="tab"
