--- a/templates/WebApp/map_from_GEE.html
+++ b/templates/WebApp/map_from_GEE.html
@@ -68,25 +68,25 @@
                                     <div class="container mt-3">
                                         <ul class="m-0 nav nav-fill nav-justified nav-tabs" style="font-size:smaller;" id="myTab1" role="tablist">
                                             <li class="nav-item" role="presentation">
-                                                <button class="active nav-link" id="layers-tab" data-bs-toggle="tab"
+                                                <button class="active nav-link p-0" id="layers-tab" data-bs-toggle="tab"
                                                         data-bs-target="#layers" type="button" role="tab"
                                                         aria-controls="layers" aria-selected="true">Layers
                                                 </button>
                                             </li>
                                             <li class="nav-item" role="presentation">
-                                                <button class="nav-link" id="profile-tab" data-bs-toggle="tab"
+                                                <button class="nav-link p-0" id="profile-tab" data-bs-toggle="tab"
                                                         data-bs-target="#basemaps_gee" type="button" role="tab"
                                                         aria-controls="basemaps_gee" aria-selected="false"></i> Basemaps
                                                 </button>
                                             </li>
                                             <li class="nav-item" role="presentation">
-                                                <button class="nav-link" id="legends_gee-tab" data-bs-toggle="tab"
+                                                <button class="nav-link p-0" id="legends_gee-tab" data-bs-toggle="tab"
                                                         data-bs-target="#legends_gee" type="button" role="tab"
                                                         aria-controls="legends_gee" aria-selected="false"></i> Legends
                                                 </button>
                                             </li>
                                                  <li class="nav-item" role="presentation">
-                                                <button class="nav-link" id="location_gee-tab" data-bs-toggle="tab"
+                                                <button class="nav-link p-0" id="location_gee-tab" data-bs-toggle="tab"
                                                         data-bs-target="#location_gee" type="button" role="tab"
                                                         aria-controls="location_gee" aria-selected="false"></i> Location
                                                 </button>
