--- a/templates/WebApp/map_fixedsize.html
+++ b/templates/WebApp/map_fixedsize.html
@@ -51,7 +51,7 @@
                 <div class="row">
                     <!-- Area Chart -->
                     <div class="col-xl-12 col-lg-12">
-                        <div class="card mb-4">
+                        <div class="card mb-4 mt-4">
                             <!-- Card Header - Dropdown -->
                             <div
                                     class="card-header py-3 d-flex flex-row align-items-center justify-content-between">
