--- a/templates/WebApp/map_fullscreen.html
+++ b/templates/WebApp/map_fullscreen.html
@@ -231,6 +231,16 @@
                                 </div>
                             </div>
                         </div>
+                        <br>
+                        <br>
+ <div class="text-left text-dark alert alert-info text-center text-break m-auto" style="bottom:0;width: 230px;">
+                                   <strong>templates/WebApp/map_fullscreen.html</strong> contains the HTML code
+                                            to modify
+                                            the text and graphics in this page.
+                                      <strong>staticfiles/js/map_fullscreen.js</strong> controls the behavior of
+                                            the map.
+
+                                </div>
                     </div>
                     <div id="map3" style="height:83vh;"></div>
 
