--- a/templates/WebApp/chart_from_netCDF.html
+++ b/templates/WebApp/chart_from_netCDF.html
@@ -39,7 +39,7 @@
                 <div class="container-fluid">
                     <div class="row d-flex justify-content-center">
                         <!-- Line Chart -->
-                        <div class="col-xl-12 col-lg-12 text-center">
+                        <div class="col-xl-12 col-lg-12 text-center mt-4">
                             <label class="form-label" for="customFile">Upload a json file with polygon geometry</label>
                             <input type="file" class="form-control" id="selectFiles"/>
                             <hr>
