--- a/templates/WebApp/about.html
+++ b/templates/WebApp/about.html
@@ -1,36 +1,14 @@
-<!DOCTYPE html>
-<html lang="en">
+{% extends "WebApp/app_base.html" %}
 {% load static %}
-<head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="">
-    <meta name="author" content="">
-    <title>SERVIR AppTemplate</title>
-    <link rel="icon" href="{% static '/images/logo.png' %}" type="image/png">
-    <link href="{% static '/css/all.min.css' %}" rel="stylesheet" type="text/css">
-    <link href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i"
-          rel="stylesheet">
-    <!-- Bootstrap-->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-    <!-- Leaflet-->
-    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.2/dist/leaflet.css"
-          integrity="sha256-sA+zWATbFveLLNqWO2gtiw3HL/lh1giY/Inf1BJ0z14=" crossorigin=""/>
-    <script src="https://unpkg.com/leaflet@1.9.2/dist/leaflet.js"
-            integrity="sha256-o9N1jGDZrf5tS+Ft4gbIK7mYMipq9lqpVJ91xHSyKhg=" crossorigin=""></script>
+{% block title %}SERVIR AppTemplate - About{% endblock %}
+{% block script %}
     <!-- Custom styles-->
-    <link href="{% static '/css/basic.css' %}" rel="stylesheet">
-</head>
-<body id="page-top">
-    <div id="wrapper">
-        <!-- Content Wrapper -->
-        <div id="content-wrapper" class="d-flex flex-column">
-            <!-- Main Content -->
-            <div id="content">
-                {% include "WebApp/topbar.html" %}
+
+    <!-- Custom scripts-->
+
+{% endblock %}
+
+{% block content %}
                 <br>
                 <div class="container-fluid">
                     <div class="row">
@@ -123,8 +101,4 @@
                         </div>
                     </div>
                 </div>
-            </div>
-        </div>
-    </div>
-</body>
-</html>
+{% endblock %}
