--- a/templates/WebApp/feedback.html
+++ b/templates/WebApp/feedback.html
@@ -1,36 +1,19 @@
-<!DOCTYPE html>
-<html lang="en">
-    {% load static %}
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-        <meta name="description" content="">
-        <meta name="author" content="">
-        <link rel = "icon" href ="{% static '/images/logo.png' %}" type = "image/png">
-        <title>SERVIR AppTemplate</title>
-        <link href="{% static '/css/all.min.css' %}" rel="stylesheet" type="text/css">
-        <link href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet">
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet">
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"></script>
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-        <link href="{% static '/css/basic.css' %}" rel="stylesheet">
-    </head>
-    <body id="page-top">
-        <div id="wrapper">
-{#            {% include "WebApp/sidebar.html" %}#}
-            <!-- Content Wrapper -->
-            <div id="content-wrapper" class="d-flex flex-column">
-                <!-- Main Content -->
-                <div id="content">
-                    {% include "WebApp/topbar.html" %}
-                     <div class="container-fluid">
-                        <div class="row">
-                            <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdpBjfXz9ETRiQnFgy4Y6eXKKQjwA1H6-c-qva_2VN_1vDQ6g/viewform?usp=sf_link" width="640" height="949" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
-                        </div>
-                     </div>
-                </div>
-            </div>
-         </div>
-    </body>
-</html>
+{% extends "WebApp/app_base.html" %}
+{% load static %}
+{% block title %}SERVIR AppTemplate - Feedback{% endblock %}
+{% block script %}
+    <!-- Custom styles-->
+
+    <!-- Custom scripts-->
+
+{% endblock %}
+
+{% block content %}
+    <div class="container-fluid">
+        <div class="row">
+            <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdpBjfXz9ETRiQnFgy4Y6eXKKQjwA1H6-c-qva_2VN_1vDQ6g/viewform?usp=sf_link"
+                    width="640" height="949" frameborder="0" marginheight="0" marginwidth="0">Loading…
+            </iframe>
+        </div>
+    </div>
+{% endblock %}
