--- a/templates/socialaccount/login.html
+++ b/templates/socialaccount/login.html
@@ -1,19 +1,7 @@
- {% load static %}
-<link href="{% static '/css/basic.css' %}" rel="stylesheet">
+{% extends "WebApp/app_base.html" %}
+{% load static %}
  {% load i18n account %}
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
-          integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
-    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
-
-
-    <div id="wrapper">
-    {#        {% include "WebApp/sidebar.html" %}#}
-    <!-- Content Wrapper -->
-    <div id="content-wrapper" class="d-flex flex-column">
-        <!-- Main Content -->
-        <div id="content">
-            {% include "WebApp/topbar.html" %}
-{% block common_scripts %}
+{% block script %}
     <style lang="text/css">
         .customGPlusSignIn {
             cursor: pointer;
@@ -43,7 +31,12 @@
     </style>
 {% endblock %}
 
+
+
+
+
 {% block content %}
+    <div style="min-height: calc(100vh - 190px)">
     <form method="post">
         {% csrf_token %}
           <h2 class="m-4 text-center">Geospatial App Authentication</h2>
@@ -53,7 +46,5 @@
         </div>
 
     </form>
+    </div>
 {% endblock %}
-        </div>
-    </div>
-    </div>
