chart sample file

--- a/templates/WebApp/chart_from_ClimateSERV.html
+++ b/templates/WebApp/chart_from_ClimateSERV.html
@@ -42,6 +42,7 @@
                     <!-- Line Chart -->
                     <div class="col-xl-12 col-lg-12 text-center mt-4">
                         <label class="form-label" for="customFile">Upload a json file with polygon geometry</label>
+                        <label class="form-label" for="customFile">Please download a sample json file here</label>
                         <input type="file" class="form-control" id="selectFiles"/>
                         <hr>
                         <div class="card shadow mb-4">
