upload file json and sample geojson added. Some UI updates

--- a/templates/WebApp/chart_from_ClimateSERV.html
+++ b/templates/WebApp/chart_from_ClimateSERV.html
@@ -41,8 +41,8 @@
                 <div class="row d-flex justify-content-center">
                     <!-- Line Chart -->
                     <div class="col-xl-12 col-lg-12 text-center mt-4">
-                        <label class="form-label" for="customFile">Upload a json file with polygon geometry</label>
-                        <label class="form-label" for="customFile">Please download a sample json file here</label>
+                        <label class="form-label" for="customFile">Upload a json file with polygon geometry.</label>
+                        <label class="form-label" for="sampleFile">Please download a sample geojson file <a href="{% static 'js/sample.geojson' %}" download>here</a></label>
                         <input type="file" class="form-control" id="selectFiles"/>
                         <hr>
                         <div class="card shadow mb-4">
